# openfm-qt

./: .gitignore  LICENSE  Open-FM.spec  README.md  build.py  form.ui  main.py  mainwindow.py  openfm-qt.pyproject  prebuild.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
openfm_qt/: __init__.py  __main__.py  mainwindow.py
ui/: main_window.ui
