[tool.poetry]
name = "openfm-qt"
version = "0.1.0"
description = "Qt client for Polish internet radio Open FM."
authors = ["Wiktor Zykubek <wz-git@mailbox.org>"]
license = "ISC"
readme = "README.md"
packages = [{include = "openfm_qt"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
PySide6 = "^6.5.1.1"

[tool.poetry.scripts]
openfm-qt = "openfm_qt.__main__:main"

[tool.poetry.build]
script = "prebuild.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
